# SGD-PJATK

./: .gitignore  CMakeLists.txt  README.md
src/: Ball.cpp  Ball.hpp  Makefile  Pallete.cpp  Pallete.hpp  Vector2f.cpp  Vector2f.hpp  main.cpp  my_game  pong
